# app/Application/Handlers/CreateResumeHandler.php
@@ -10,6 +10,7 @@ use App\Domain\Entities\Resume;
 use App\Domain\Events\ResumeCreatedEvent;
 use App\Domain\ValueObjects\Name;
 use App\Domain\ValueObjects\ResumeId;
+use App\Domain\ValueObjects\ResumeStatus;
 
 final class CreateResumeHandler
 {
@@ -19,7 +20,12 @@ final class CreateResumeHandler
 
     public function handle(CreateResumeCommand $command): Resume
     {
-        $resume = new Resume(new ResumeId(0), new Name($command->name), $command->email);
+        $resume = new Resume(
+            new ResumeId(0),
+            new Name($command->name),
+            $command->email,
+            ResumeStatus::draft(),
+        );
         $this->resumes->save($resume);
         event(new ResumeCreatedEvent($resume));
 
